got search working. Started on formatting search results
Signed-off-by: dee.randel <dee.randel@gmail.com>

--- a/MonsterHunterCodex/MonsterHunterCodex/Content/Armory.css
+++ b/MonsterHunterCodex/MonsterHunterCodex/Content/Armory.css
@@ -17,6 +17,8 @@
     border: 8px outset transparent;
     align-content: center;
     padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .gear-tile.active {
@@ -64,4 +66,9 @@
 
 .gear-search-box{
     margin: 0 auto;
+}
+
+.results-list{
+    max-height:325px;
+    overflow-y:auto;
 }
