--- a/MonsterHunterCodex/MonsterHunterCodex/Views/Armory/index.cshtml
+++ b/MonsterHunterCodex/MonsterHunterCodex/Views/Armory/index.cshtml
@@ -7,9 +7,12 @@
                 <div class="col-sm-4" id="gear-selection">
                     <span class="text-center"><h3>Gear Selection</h3></span>
                     <div id="selection-container" >
-                        <div class="gear-tile" v-on:click="openGearSearch($event,'head')">
+                        <div class="gear-tile"  v-bind:class="(visFlags.activeSearch == 'head') ? 'active' : ''">
                             <div class="col-sm">
                                 <div class="info-container">
+                                    <button class="btn" v-bind:class="visFlags.activeSearch == 'head' ? 'btn-red' : 'btn-blu'" v-on:click="openGearSearch($event,'head')" style="float:right">
+                                        <i v-bind:class="visFlags.activeSearch == 'head' ? 'fa fa-times' : 'fas fa-chevron-down'"></i>
+                                    </button>
                                     <img class="gear-icon" src="~/Assets/Images/Armor/Stock/head-icon.png" height="40" width="40" />
                                     <h3 class="gear-title">Head Armor</h3>
                                     <h4 class="gear-name">Armor Name Here</h4>
@@ -17,13 +20,33 @@
                             </div>
                             <transition name="slide">
                                 <div class="gear-search" v-if="visFlags.activeSearch=='head'">
-                                    <input class="form-control form-control-sm ml-3 w-75 gear-search-box" type="text" placeholder="Search" aria-label="Search">
-                                    <div style="width: 100%; text-align: center;" class="spinner-div">
-                                        <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
-                                        <div class="results-list">
-
-                                        </div>
+                                    <div id="head-input-group" class="input-group">
+                                        <input class="form-control form-control-sm ml-3 w-75 gear-search-box search-box" type="text" placeholder="Search" aria-label="Search" v-on:click.prevent v-model="search.head.query">
+                                        <span class="input-group-btn" v-on:click.prevent>
+                                            <button class="btn btn-blu" v-on:click.prevent="doGearSearch('head')"><i class="fas fa-search"></i></button>
+                                        </span>
                                     </div>
+                                    <div style="width: 100%; text-align: center;" class="spinner-div" v-bind:class="search.head.showSpinner ? 'active' : ''">
+                                        <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+                                    </div>
+                                    <transition name="slide">
+                                        <div v-if="!search.head.showSpinner" class="results-list">
+                                            <ul class="list-group">
+                                                <li class="list-group-item" v-for="result in search.head.results">
+                                                    <div class="row">
+                                                        <div class="col-sm-5">
+                                                            <img v-bind:src="result.assets !== null ? result.assets.imageMale : '/Assets/Images/Armor/Stock/head-icon.png'" height="80" width="80" />
+                                                        </div>
+                                                        <div class="col-sm-7">
+                                                            {{ result.name }}
+                                                        </div>
+                                                    </div>
+                                                    
+
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </transition>
                                 </div>
                             </transition>
                         </div>
@@ -31,7 +54,7 @@
                 </div>
                 <div class="col-md-8" id="gear-overview">
                     <span class="text-center"><h3>Gear Overview</h3></span>
-                    <button v-on:click="showSpinner()">Test Spinner</button>
+                    <button v-on:click="">Test Button</button>
                 </div>
             </div>
         </div>
@@ -45,37 +68,75 @@
             name: '',
             visFlags: {
                 activeSearch: '',
+            },
+            search:
+            {
+                head: {
+                    query: '',
+                    showSpinner: false,
+                    results: [],
+                },
+                arms: {
+
+                },
+                chest: {
+
+                },
+                waist: {
+
+                },
+                legs: {
+
+                },
             }
         },
         methods: {
             openGearSearch(event, type) {
-                              
-                var parent = $(event.target).closest(".gear-tile");
-                console.log(parent.hasClass('active'))
-
-                if (parent.hasClass('active')) {
-                    parent.removeClass('active')
-                    this.visFlags.activeSearch = '';
-                } else {
-                    $('.gear-tile').each(function () {
-                        $(this).removeClass('active');
-                    });
-                    parent.addClass('active');
-                    this.visFlags.activeSearch = type
-                }
-                
-                
-
+                this.visFlags.activeSearch = this.visFlags.activeSearch == type ? '' : type;
             },
             showSpinner: function () {
                 $('.spinner-div').hasClass('active') ? $('.spinner-div').removeClass('active') : $('.spinner-div').addClass('active');
+            },
+            validateSearch: function () {
+                var vm = this;
+                if (vm.search[vm.visFlags.activeSearch].query == '') {
+                    $('#' + vm.visFlags.activeSearch + '-input-group').effect("shake", { direction: 'up', distance: 5, times: 2 });
+                    return false;
+                } else {
+                    return true;
+                }
+            },
+            doGearSearch: function (armorType) {
+                var vm = this;
+                var isValid = vm.validateSearch();
+                if (isValid) {
+                    vm.search[armorType].showSpinner = true;
+                    $.ajax(
+	                {
+                        type: 'GET',
+                        url: 'https://mhw-db.com/armor?q={"type":"' + armorType + '","name":{"$like":"%' + this.search.head.query + '%"}}',
+                        data: '',
+                        type: 'GET',
+                            success: function (data) {
+                                vm.search[armorType].showSpinner = false;
+                            console.log(data)
+                            vm.search[armorType].results = data;
+		                }//end success
+	                })//end ajax
+                }
+                
+            },
+            test: function (result) {
+                //
+                console.log(result.assets)
             }
+            
         },
         computed: {
             
         },
         mounted() {
-
+            console.log(this.visFlags.activeSearch)
         } ,
     })
 </script>
