--- a/MonsterHunterCodex/MonsterHunterCodex/Views/Shared/_Layout.cshtml
+++ b/MonsterHunterCodex/MonsterHunterCodex/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/vue.js"></script>
+    <script src="https://kit.fontawesome.com/cdf21b61d4.js" crossorigin="anonymous"></script>
     <link href="~/Content/LoadSpinner.css" rel="stylesheet" />
 </head>
 <body>
@@ -44,6 +45,7 @@
 
 
     @Scripts.Render("~/bundles/jquery")
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
