--- a/MonsterHunterCodex/MonsterHunterCodex/Content/Armory.css
+++ b/MonsterHunterCodex/MonsterHunterCodex/Content/Armory.css
@@ -73,3 +73,13 @@
     max-height:325px;
     overflow-y:auto;
 }
+
+.list-group-item {
+
+}
+
+.list-group-item:hover {
+    border:1px solid #0052ab;
+    font-weight: bold;
+    z-index:1000;
+}
