--- a/MonsterHunterCodex/MonsterHunterCodex/Views/Home/Index.cshtml
+++ b/MonsterHunterCodex/MonsterHunterCodex/Views/Home/Index.cshtml
@@ -2,19 +2,19 @@
     ViewBag.Title = "Home Page";
 }
 <div id="HomeVue">
-    <div class="jumbotron">
+    <div class="jumbotron data-container">
         <h1>Monster Hunter Codex</h1>
         <p>Monster Hunter Codex is a free web utility that allows you to create armor/weapon builds, analyze stats, get information on monsters, and more!</p>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 data-container">
             <h2>Armory </h2>
             <p>
                 Create builds by searching and collecting armor, weapons, gems, and accessories from the Mosnter Hunter World Item Database.
             </p>
             <p><a class="btn btn-default" href="~/Armory">To Armory &raquo;</a></p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 data-container" >
             <h2>Monsters</h2>
             <p>
                 Prepare for battle! Get all the knowledge you need to take down a monster from weaknesses, ailments, and resistances, to locations, rewards and more!
