--- a/MonsterHunterCodex/MonsterHunterCodex/Views/Armory/index.cshtml
+++ b/MonsterHunterCodex/MonsterHunterCodex/Views/Armory/index.cshtml
@@ -18,7 +18,7 @@
                             <gear-tile ref="waistComponent" geartype="waist"></gear-tile>
                             <gear-tile ref="legsComponent" geartype="legs"></gear-tile>
                             <div v-bind:class="showEdit" class="data-container-footer text-center">
-                                <button class="btn btn-blu">Autoill Set</button>
+                                <button class="btn btn-blu">Autoill Set</button><!-- is this worth it? -->
                                 <button class="btn btn-dark" @@click="clearSelectedGear">Clear</button>
 
                             </div>
@@ -54,6 +54,23 @@
 
                         </div>
                     </div>
+                    @*<div>
+                        <table>
+                            <tr>
+                                <th>Rarity</th>
+                                <th>Defense</th>
+                                <th>Fire Res</th>
+                                <th>Water Res</th>
+                                <th>Thunder Res</th>
+                                <th>Ice Res</th>
+                                <th>Dargon Res</th>
+                                <th>Slots</th>
+                            </tr>
+                            <tr>
+
+                            </tr>
+                        </table>
+                    </div>*@
                 </div>
             </div>
         </div>
