--- a/MonsterHunterCodex/MonsterHunterCodex/Views/Shared/_Layout.cshtml
+++ b/MonsterHunterCodex/MonsterHunterCodex/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Armory", "Index", "Armory")</li>
                     <li>@Html.ActionLink("Monsters", "Index", "Monsters")</li>
+                    <li>@Html.ActionLink("Quests", "Index", "Quests")</li>
                 </ul>
             </div>
         </div>
