--- a/MonsterHunterCodex/MonsterHunterCodex/Views/Home/Index.cshtml
+++ b/MonsterHunterCodex/MonsterHunterCodex/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using MonsterHunterCodex.Models
+@{
+    @model HomeModel
     ViewBag.Title = "Home Page";
 }
 <div id="HomeVue">
@@ -6,20 +8,27 @@
         <h1>Monster Hunter Codex</h1>
         <p>Monster Hunter Codex is a free web utility that allows you to create armor/weapon builds, analyze stats, get information on monsters, and more!</p>
     </div>
-    <div class="row">
-        <div class="col-md-6 data-container">
-            <h2>Armory </h2>
+    <div class="row container">
+        <div class="col-md-5 data-container">
+            <h2>Armory (MH World)</h2>
             <p>
                 Create builds by searching and collecting armor, weapons, gems, and accessories from the Mosnter Hunter World Item Database.
             </p>
-            <p><a class="btn btn-default" href="~/Armory">To Armory &raquo;</a></p>
+            <p><a class="btn btn-default btn-purple" href="~/Armory">To Armory &raquo;</a></p>
         </div>
-        <div class="col-md-6 data-container" >
+        <div class="col-md-5 data-container">
+            <h2>Armory (MH Rise)</h2>
+            <p>
+                Create builds by searching and collecting armor, weapons, gems, and accessories from the Mosnter Hunter World Item Database.
+            </p>
+            <p><a class="btn btn-default btn-purple" href="~/RiseArmory">To Armory &raquo;</a></p>
+        </div>
+        <div class="col-md-5 data-container">
             <h2>Monsters</h2>
             <p>
                 Prepare for battle! Get all the knowledge you need to take down a monster from weaknesses, ailments, and resistances, to locations, rewards and more!
             </p>
-            <p><a class="btn btn-default" href="~/Monsters">To Monsters &raquo;</a></p>
+            <p><a class="btn btn-default btn-purple" href="~/Monsters">To Monsters &raquo;</a></p>
         </div>
     </div>
 </div>
@@ -30,14 +39,14 @@
             message: 'Hello'
         },
         methods: {
-           
+
         },
         computed: {
-            
+
         },
         mounted() {
 
-        } ,
+        },
     })
 
 </script>
