--- a/MonsterHunterCodex/MonsterHunterCodex/Views/RiseArmory/index.cshtml
+++ b/MonsterHunterCodex/MonsterHunterCodex/Views/RiseArmory/index.cshtml
@@ -8,9 +8,21 @@
 <div id="RiseArmoryVue">
     <div class="page-header text-center"><h2>Monster Hunter Rise Armory</h2></div>
     <div class="container-fluid">
+        <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="data-container">
+                <gear-selection></gear-selection>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-8 col-lg-8">
+            <div class="data-container">
 
+            </div>
+        </div>
     </div>
 </div>
+
+<script src="~/Vue/Components/gearSelection.js"></script>
+
 <script>
     var vm = new Vue({
         el: '#RiseArmoryVue',
