fixed component nesting issue. Reached out to DB guy to see if the rise db has an api...

--- a/MonsterHunterCodex/MonsterHunterCodex/Content/Site.css
+++ b/MonsterHunterCodex/MonsterHunterCodex/Content/Site.css
@@ -57,6 +57,11 @@ textarea {
     padding: 10px;
 }
 
+.data-container-tight {
+    background-color: #1D1D1D;
+    border-radius: 15px;
+}
+
 .data-container-flex {
     padding: 20px;
     background-color: #1D1D1D;
